api-login-logics

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="purple">#A362E9</color>
     <color name="paleGrey">#B9B6BB</color>
     <color name="lightGrey">#8E8E93</color>
+    <color name="blue">#2345C1</color>
 </resources>
