--- a/app/src/main/res/drawable/bg_round_corner_btn_signup.xml
+++ b/app/src/main/res/drawable/bg_round_corner_btn_signup.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <solid android:color="@color/purple"/>
+    <solid android:color="@color/blue"/>
     <corners android:radius="@dimen/spacing_20"/>
 </shape>
