--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,76 +9,70 @@
 
 
     <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="@dimen/spacing_200"
-        android:layout_height="@dimen/spacinsg_219"
-        android:layout_marginStart="@dimen/spacing_88"
-        android:layout_marginEnd="@dimen/spacing_102"
-        android:layout_marginTop="@dimen/spacing_52"
+        android:id="@+id/iv_HA_logo"
+        android:layout_width="@dimen/spacing_225"
+        android:layout_height="@dimen/spacing_225"
+        android:layout_marginTop="@dimen/spacing_60"
         android:src="@drawable/ic_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.809"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_email"
+        android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_36"
-        android:layout_marginTop="@dimen/spacing_48"
-        android:fontFamily="@font/lato"
-        android:text="@string/email"
+        android:layout_marginTop="@dimen/spacing_40"
+        android:text="Username"
         android:textColor="@color/black"
-        android:textSize="@dimen/font_20"
+        android:textSize="@dimen/spacing_22"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_HA_logo" />
 
     <EditText
-        android:id="@+id/et_email_login"
-        android:layout_width="0dp"
+        android:id="@+id/et_username"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/spacing_60"
-        android:layout_marginStart="@dimen/spacing_26"
-        android:layout_marginTop="@dimen/spacing_9"
-        android:layout_marginEnd="@dimen/spacing_30"
-        android:inputType="textEmailAddress"
+        android:layout_marginLeft="@dimen/spacing_28"
+        android:layout_marginRight="@dimen/spacing_28"
         android:background="@drawable/bg_round_corner_et"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_email" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_username"/>
 
     <TextView
         android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_36"
-        android:layout_marginTop="@dimen/spacing_27"
-        android:fontFamily="@font/lato"
-        android:text="@string/password"
+        android:layout_marginTop="@dimen/spacing_28"
+        android:text="Password"
         android:textColor="@color/black"
-        android:textSize="@dimen/font_20"
+        android:textSize="@dimen/spacing_22"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />
+        app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
     <EditText
-        android:id="@+id/et_password_login"
-        android:layout_width="0dp"
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/spacing_60"
-        android:layout_marginStart="@dimen/spacing_26"
-        android:layout_marginTop="@dimen/spacing_9"
-        android:layout_marginEnd="@dimen/spacing_30"
-        android:inputType="textPassword"
+        android:layout_marginLeft="@dimen/spacing_28"
+        android:layout_marginRight="@dimen/spacing_28"
         android:background="@drawable/bg_round_corner_et"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_password"
-        android:autofillHints="" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_password"/>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="@dimen/spacing_215"
         android:layout_height="@dimen/spacing_60"
-        android:layout_marginTop="@dimen/spacing_61"
+        android:layout_marginTop="50dp"
         android:background="@drawable/bg_round_corner_btn_signup"
         android:text="@string/login"
         android:textAllCaps="false"
@@ -86,14 +80,12 @@
         android:textSize="@dimen/font_28"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />
-
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
     <TextView
         android:id="@+id/tv_do_not_have_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_17"
-        android:fontFamily="@font/lato"
         android:text="@string/tv_don_t_have_an_account"
         android:textColor="@color/black"
         android:textSize="@dimen/font_18"
@@ -106,13 +98,13 @@
         android:id="@+id/tv_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/lato"
         android:paddingStart="@dimen/spacing_7"
         android:paddingEnd="@dimen/spacing_7"
         android:text="@string/sign_up"
-        android:textColor="@color/purple"
+        android:textColor="@color/blue"
         android:textSize="@dimen/font_18"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_do_not_have_account"
         app:layout_constraintStart_toEndOf="@+id/tv_do_not_have_account" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
