--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,27 @@
     <dimen name="spacing_7">7dp</dimen>
     <dimen name="spacing_20">20dp</dimen>
     <dimen name="spacing_10">10dp</dimen>
+    <dimen name="spacing_25">25dp</dimen>
+    <dimen name="font_19">19sp</dimen>
+    <dimen name="spacing_0">0dp</dimen>
+    <dimen name="spacing_44">44dp</dimen>
+    <dimen name="spacing_15">15dp</dimen>
+    <dimen name="spacing_2">2dp</dimen>
+    <dimen name="spacing_1212dp4" />
+    <dimen name="spacing_12">12dp</dimen>
+    <dimen name="font_17">17sp</dimen>
+    <dimen name="font_12">12sp</dimen>
+    <dimen name="spacing_100">100dp</dimen>
+    <dimen name="spacing_8">8dp</dimen>
+    <dimen name="spacing_">50dp</dimen>
+    <dimen name="spacing_50">50dp</dimen>
+    <dimen name="spacing_22">22sp</dimen>
+    <dimen name="font_16">16sp</dimen>
+    <dimen name="spacing_300">300dp</dimen>
+    <dimen name="spacing_93">93dp</dimen>
+    <dimen name="spacing_18">18dp</dimen>
+    <dimen name="spacing_225">225dp</dimen>
+    <dimen name="spacing_40">40dp</dimen>
+    <dimen name="spacing_28">28dp</dimen>
+    <dimen name="spacing_308">308dp</dimen>
 </resources>
